# browser-network-interception

./: .gitignore  .tool-versions  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: check-regression.yml  ci.yml  publish.yml
k8s/network-e2e-tests/: Chart.yaml  values-browser-tests.yaml  values-e2e-tests.yaml  values.yaml
k8s/network-e2e-tests/templates/: job.yaml
network/banner/: default.py  factory.py
network/config/: configuration.py
network/config/tests/: test_configuration.py
network/keywords/: browser.py  browser_keywords.py
network/report/: pytest_report.py
network/utils/: file.py
network/web_server/: server.py
scripts/: linter.py  run_test_group.py
src/banner/: factory.py
src/config/: configuration.py
src/keywords/: browser.py
src/utils/: singleton_meta.py
src/web_server/: server.py
tests/: ExampleTest.py  test_banner_ad_in_browser.py
