[tool.poetry]
name = 'browser-network-interception'
version = '0.1.0'
description = ''
authors = ['Hubert Zajac <hubertzajac6@gmail.com>']
readme = 'README.md'
packages = [{ include = "network" }]

[tool.poetry.dependencies]
python = '^3.11'
pylint = "^2.17.5"
mypy = "^1.5.1"
browser-hz = "^4.0.1"
pytest = '^7.4.1'
pytest-xdist = '^3.3.1'
pip = "^23.2.1"
install = "^1.3.5"
pytest-reporter-html1 = "^0.8.3"

[tool.pylint.messages_control]
max-line-length = 120
max-attributes = 10
disable = [
    "missing-docstring",
    "logging-fstring-interpolation",
    "too-few-public-methods"
]
good-names = "x, y, ad"

[tool.mypy]
namespace_packages = true
packages = ["network", "tests", "scripts"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disable_error_code = "attr-defined,union-attr"

[tool.pytest.ini_options]
markers = [
    'browser'
]
log_cli = "true"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.scripts]
linters = 'scripts.linter:run_linters'
all-tests = 'scripts.run_test_group:run_all_tests_in_parallel'
browser-tests = 'scripts.run_test_group:run_e2e_web_browser_tests_in_parallel'

[build-system]
requires = ['poetry-core>=1.5.1']
build-backend = 'poetry.core.masonry.api'
